--- a/desafios/des12/style.css
+++ b/desafios/des12/style.css
@@ -14,7 +14,68 @@
     --image01: ''
     
 }
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
+body {
+    background-color: lightgray;
+    min-height: 100vh;
+}
+
+header {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+header > h1 {
+    padding-top: 50px;
+    /*text-transform: uppercase; (deixa todas as letras maiusculas) */
+    font-variant: small-caps; /*toas as letras maiusculas, mas as iniciais se destacam*/
+}
+header > p {
+    padding-bottom: 50px;
+}
+header > p > a {
+    color: white;
+    text-decoration: none;
+}
+header > p > a:hover {
+    text-decoration: underline;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
+    line-height: 2em;
+    
+}
+
+section#normal {
+    background-color: white;
+
+}
+
+section#imagem {
+    background-color: rgb(49, 47, 47);
+    color: white;
+
+}
+section#imagem > p {
+    background-color: rgba(0, 0, 0, 0.308);
+    width: 400px;
+}
+
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+/*
 body {
     background-color: aqua;
     height: 100vh;
@@ -22,13 +83,13 @@ body {
     margin: 0px;
     background-image: url('imagens/background001.jpg');
     /*background-image: url('imagens/background002.jpg');*/
-    background-repeat: no-repeat;
+    /*background-repeat: no-repeat;
     
     background-size: 100% 100%;
     
     
 }
-/*-------------------------area header---------------------------*/
+/*-------------------------area header---------------------------
 header {
     background-color: black;
     text-align: center;
@@ -43,10 +104,7 @@ header > h1 {
     font-size: 5em;
     padding-top: 50px;
     margin-bottom: 0px;
-    
-    
-    
-    
+ 
 }
 header > p {
     color: white;
@@ -55,9 +113,7 @@ header > p {
     padding-bottom: 50px;
     margin-top: 0px;
     margin-bottom: 0px;
-    
-    
-    
+  
 }
 header > p > a {
     text-decoration: none;
@@ -68,7 +124,7 @@ header > p > a:hover {
     text-decoration: underline;
 }
 
-/*-----------------area main-------------------------*/
+/*-----------------area main-------------------------
 
 section {
     font-family: var(--font-texto);
@@ -76,23 +132,20 @@ section {
   
 }
 
-article > p.branco {
+#container > p.branco {
     background-color: white;
     padding-top: 100px;
     padding-left: 20px;
     padding-bottom: 100px;
     margin: 0px;
-
 }
 
-article > p.transparente {
+#container > p.transparente {
     padding-top: 50px;
     padding-bottom: 50px;
     background-color: rgba(0, 0, 0, 0.514);
     width: 500px;
     margin-top: 50px;
-    
 
-    
     margin: 0px;
-}
+}*/
